2010-09-10  Robert Millan  <rmh@gnu.org>

	Solaris support in grub_find_zpool_from_dir().  Thanks
	Seth Goldberg for referring to getextmntent() facility.

	* configure.ac: Check for getextmntent(), `sys/mnttab.h' and
	`sys/mkdev.h'.
	* grub-core/kern/emu/misc.c [HAVE_SYS_MNTTAB_H]: Include
	`<sys/mnttab.h>'.
	[HAVE_SYS_MKDEV_H]: Include `<sys/mkdev.h>'.
	[HAVE_GETEXTMNTENT] (grub_find_zpool_from_dir): Add getextmntent()
	method for finding zpool name.

2010-09-10  Colin Watson  <cjwatson@ubuntu.com>

	grub-fstest needs the host and hostfs modules while other utilities
	actively require those modules to be absent, so grub-fstest needs
	its own initialisation and finalisation code.

	* Makefile.am (grub_fstest.pp): New target.
	(grub_fstest_init.lst): Likewise.
	(grub_fstest_init.c): Likewise.
	* Makefile.util.def (grub-fstest): Add grub_fstest_init.c.

2010-09-10  Robert Millan  <rmh@gnu.org>

	* configure.ac: Check for `struct statfs.f_fstypename' and
	`struct statfs.f_mntfromname'.

	* grub-core/kern/emu/misc.c (grub_find_zpool_from_dir): Conditionalize
	kFreeBSD-specific code.

2010-09-10  Robert Millan  <rmh@gnu.org>

	* util/grub.d/10_kfreebsd.in: Fix ${kfreebsd_device} initialization
	on ZFS.  Now non-main filesystems are supported as / too.

2010-09-09  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.util.def (libgrub.a): Move grub-core/kern/emu/hostfs.c
	and grub-core/disk/host.c to ...
	(grub-fstest): ... here.  Having the host disk implementation
	present confuses grub-probe and other utility programs.

	* util/grub-mkconfig.in: Only verify readability of grub.cfg.new
	when writing to a file, not when writing to stdout.

2010-09-09  BVK Chaitanya  <bvk.groups@gmail.com>

	* tests/partmap_test.in: New test for partitions.
	* Makefile.util.def: Rules for new test.

2010-09-09  Robert Millan  <rmh@gnu.org>

	* util/grub-probe.c (probe): Fix a pair of unhandled error
	conditions.

2010-09-09  Robert Millan  <rmh@gnu.org>
